// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/bundler/extract extractAllPackageFiles() parses complex Gemfile 1`] = `
Object {
  "compatibility": Object {
    "bundler": "1.17.2",
    "ruby": "ruby 2.6.0p0",
  },
  "deps": Array [
    Object {
      "currentValue": null,
      "depName": "minitest-bisect",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        6,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": ">= 1.0.0, < 5",
      "datasource": "rubygems",
      "depName": "minitest-retry",
      "depTypes": Array [
        "test",
        "development",
      ],
      "lineNumbers": Array [
        7,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "byebug",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        10,
      ],
      "platforms": Array [
        "mri",
      ],
      "registryUrls": Array [
        "https://external.com/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "stackprof",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        11,
      ],
      "platforms": Array [
        "mri",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "benchmark-ips",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        15,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://another-external.com/",
      ],
      "skipReason": "no-version",
    },
  ],
  "manager": "bundler",
  "packageFile": "Gemfile.complex",
  "registryUrls": Array [
    "https://rubygems.org/",
    "https://external.com/",
    "https://another-external.com/",
  ],
}
`;

exports[`lib/manager/bundler/extract extractAllPackageFiles() parses rails Gemfile 1`] = `
Object {
  "compatibility": Object {
    "bundler": "1.17.2",
    "ruby": null,
  },
  "deps": Array [
    Object {
      "currentValue": ">= 11.1",
      "datasource": "rubygems",
      "depName": "rake",
      "depTypes": Array [],
      "lineNumbers": Array [
        10,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 2.15",
      "datasource": "rubygems",
      "depName": "capybara",
      "depTypes": Array [],
      "lineNumbers": Array [
        12,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": "~> 1.2",
      "datasource": "rubygems",
      "depName": "rack-cache",
      "depTypes": Array [],
      "lineNumbers": Array [
        14,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "sass-rails",
      "depTypes": Array [],
      "lineNumbers": Array [
        15,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 5",
      "datasource": "rubygems",
      "depName": "turbolinks",
      "depTypes": Array [],
      "lineNumbers": Array [
        16,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "webpacker",
      "depTypes": Array [],
      "lineNumbers": Array [
        17,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 3.1.11",
      "datasource": "rubygems",
      "depName": "bcrypt",
      "depTypes": Array [],
      "lineNumbers": Array [
        21,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 1.3.0",
      "datasource": "rubygems",
      "depName": "uglifier",
      "depTypes": Array [],
      "lineNumbers": Array [
        25,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 2.0.0",
      "datasource": "rubygems",
      "depName": "json",
      "depTypes": Array [],
      "lineNumbers": Array [
        28,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 0.47",
      "datasource": "rubygems",
      "depName": "rubocop",
      "depTypes": Array [],
      "lineNumbers": Array [
        30,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": "~> 1.0",
      "datasource": "rubygems",
      "depName": "sdoc",
      "depTypes": Array [
        "doc",
      ],
      "lineNumbers": Array [
        33,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": "~> 3.2.3",
      "datasource": "rubygems",
      "depName": "redcarpet",
      "depTypes": Array [
        "doc",
      ],
      "lineNumbers": Array [
        34,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "w3c_validators",
      "depTypes": Array [
        "doc",
      ],
      "lineNumbers": Array [
        35,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 1.2.0",
      "datasource": "rubygems",
      "depName": "kindlerb",
      "depTypes": Array [
        "doc",
      ],
      "lineNumbers": Array [
        36,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "dalli",
      "depTypes": Array [],
      "lineNumbers": Array [
        40,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": ">= 3.0.5, < 3.2",
      "datasource": "rubygems",
      "depName": "listen",
      "depTypes": Array [],
      "lineNumbers": Array [
        41,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "libxml-ruby",
      "depTypes": Array [],
      "lineNumbers": Array [
        42,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "connection_pool",
      "depTypes": Array [],
      "lineNumbers": Array [
        43,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": ">= 1.1.0",
      "datasource": "rubygems",
      "depName": "bootsnap",
      "depTypes": Array [],
      "lineNumbers": Array [
        46,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "resque",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        50,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "resque-scheduler",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        51,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "sidekiq",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        52,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "sucker_punch",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        53,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "delayed_job",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        54,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "queue_classic",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        55,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "sneakers",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        56,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "que",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        57,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "backburner",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        58,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "delayed_job_active_record",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        59,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "sequel",
      "depTypes": Array [
        "job",
      ],
      "lineNumbers": Array [
        60,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "puma",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        65,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "hiredis",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        67,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 4.0",
      "datasource": "rubygems",
      "depName": "redis",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        68,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "redis-namespace",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        70,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "websocket-client-simple",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        72,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "blade",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        74,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "blade-sauce_labs_plugin",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        75,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "sprockets-export",
      "depTypes": Array [
        "cable",
      ],
      "lineNumbers": Array [
        76,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "aws-sdk-s3",
      "depTypes": Array [
        "storage",
      ],
      "lineNumbers": Array [
        81,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 1.11",
      "datasource": "rubygems",
      "depName": "google-cloud-storage",
      "depTypes": Array [
        "storage",
      ],
      "lineNumbers": Array [
        82,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "azure-storage",
      "depTypes": Array [
        "storage",
      ],
      "lineNumbers": Array [
        83,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 1.2",
      "datasource": "rubygems",
      "depName": "image_processing",
      "depTypes": Array [
        "storage",
      ],
      "lineNumbers": Array [
        85,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "aws-sdk-sns",
      "depTypes": Array [],
      "lineNumbers": Array [
        89,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "webmock",
      "depTypes": Array [],
      "lineNumbers": Array [
        90,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "qunit-selenium",
      "depTypes": Array [
        "ujs",
      ],
      "lineNumbers": Array [
        93,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "chromedriver-helper",
      "depTypes": Array [
        "ujs",
      ],
      "lineNumbers": Array [
        94,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "minitest-bisect",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        102,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "minitest-retry",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        103,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "stackprof",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        106,
      ],
      "platforms": Array [
        "mri",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "byebug",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        107,
      ],
      "platforms": Array [
        "mri",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "benchmark-ips",
      "depTypes": Array [
        "test",
      ],
      "lineNumbers": Array [
        110,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": ">= 1.8.1",
      "datasource": "rubygems",
      "depName": "nokogiri",
      "depTypes": Array [],
      "lineNumbers": Array [
        114,
      ],
      "platforms": Array [
        "ruby",
        "mswin",
        "mswin64",
        "mingw",
        "x64_mingw",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 1.4.6",
      "datasource": "rubygems",
      "depName": "racc",
      "depTypes": Array [],
      "lineNumbers": Array [
        117,
      ],
      "platforms": Array [
        "ruby",
        "mswin",
        "mswin64",
        "mingw",
        "x64_mingw",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": "~> 1.3.6",
      "datasource": "rubygems",
      "depName": "sqlite3",
      "depTypes": Array [],
      "lineNumbers": Array [
        120,
      ],
      "platforms": Array [
        "ruby",
        "mswin",
        "mswin64",
        "mingw",
        "x64_mingw",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 0.18.0",
      "datasource": "rubygems",
      "depName": "pg",
      "depTypes": Array [
        "db",
      ],
      "lineNumbers": Array [
        123,
      ],
      "platforms": Array [
        "ruby",
        "mswin",
        "mswin64",
        "mingw",
        "x64_mingw",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 0.4.10",
      "datasource": "rubygems",
      "depName": "mysql2",
      "depTypes": Array [
        "db",
      ],
      "lineNumbers": Array [
        124,
      ],
      "platforms": Array [
        "ruby",
        "mswin",
        "mswin64",
        "mingw",
        "x64_mingw",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "activerecord-jdbcsqlite3-adapter",
      "depTypes": Array [],
      "lineNumbers": Array [
        130,
      ],
      "platforms": Array [
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "activerecord-jdbcmysql-adapter",
      "depTypes": Array [
        "db",
      ],
      "lineNumbers": Array [
        132,
      ],
      "platforms": Array [
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "activerecord-jdbcpostgresql-adapter",
      "depTypes": Array [
        "db",
      ],
      "lineNumbers": Array [
        133,
      ],
      "platforms": Array [
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": "~> 3.0",
      "datasource": "rubygems",
      "depName": "psych",
      "depTypes": Array [],
      "lineNumbers": Array [
        147,
      ],
      "platforms": Array [
        "rbx",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": "~> 2.2",
      "datasource": "rubygems",
      "depName": "ruby-oci8",
      "depTypes": Array [],
      "lineNumbers": Array [
        153,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": null,
      "depName": "activerecord-oracle_enhanced-adapter",
      "depTypes": Array [],
      "lineNumbers": Array [
        155,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "ibm_db",
      "depTypes": Array [],
      "lineNumbers": Array [
        159,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "tzinfo-data",
      "depTypes": Array [],
      "lineNumbers": Array [
        160,
      ],
      "platforms": Array [
        "mingw",
        "mswin",
        "x64_mingw",
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": ">= 0.1.0",
      "datasource": "rubygems",
      "depName": "wdm",
      "depTypes": Array [],
      "lineNumbers": Array [
        161,
      ],
      "platforms": Array [
        "mingw",
        "mswin",
        "x64_mingw",
        "mswin64",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 1.3.0",
      "datasource": "rubygems",
      "depName": "activerecord-jdbcsqlite3-adapter",
      "depTypes": Array [],
      "lineNumbers": Array [
        136,
      ],
      "platforms": Array [
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 1.3.0",
      "datasource": "rubygems",
      "depName": "activerecord-jdbcmysql-adapter",
      "depTypes": Array [
        "db",
      ],
      "lineNumbers": Array [
        138,
      ],
      "platforms": Array [
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
    Object {
      "currentValue": ">= 1.3.0",
      "datasource": "rubygems",
      "depName": "activerecord-jdbcpostgresql-adapter",
      "depTypes": Array [
        "db",
      ],
      "lineNumbers": Array [
        139,
      ],
      "platforms": Array [
        "jruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
    },
  ],
  "manager": "bundler",
  "packageFile": "Gemfile.rails",
  "registryUrls": Array [
    "https://rubygems.org/",
  ],
}
`;

exports[`lib/manager/bundler/extract extractAllPackageFiles() parses sourceGroup Gemfile 1`] = `
Object {
  "compatibility": Object {
    "bundler": "1.17.2",
    "ruby": "ruby 2.6.0p0",
  },
  "deps": Array [
    Object {
      "currentValue": null,
      "depName": "some_internal_gem",
      "depTypes": Array [],
      "lineNumbers": Array [
        5,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://gems.example.com/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "another_internal_gem",
      "depTypes": Array [],
      "lineNumbers": Array [
        6,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://gems.example.com/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "ruby-debug",
      "depTypes": Array [],
      "lineNumbers": Array [
        10,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "sqlite3",
      "depTypes": Array [],
      "lineNumbers": Array [
        11,
      ],
      "platforms": Array [
        "ruby",
      ],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "wirble",
      "depTypes": Array [
        "development",
      ],
      "lineNumbers": Array [
        15,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
    Object {
      "currentValue": null,
      "depName": "faker",
      "depTypes": Array [
        "development",
      ],
      "lineNumbers": Array [
        16,
      ],
      "platforms": Array [],
      "registryUrls": Array [
        "https://rubygems.org/",
      ],
      "skipReason": "no-version",
    },
  ],
  "manager": "bundler",
  "packageFile": "Gemfile.sourceGroup",
  "registryUrls": Array [
    "https://gems.example.com/",
    "https://rubygems.org/",
  ],
}
`;
